# crewai-knowledge-poc

./: .env.template  .gitignore  README.md  justfile  main.py  pyproject.toml  test_api.py
knowledge/: ai-deployment.md  crewai-guide.md  fastapi-guide.md
